[package]
name = "oxideav-g728"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust ITU-T G.728 Low-Delay CELP (LD-CELP, 16 kbit/s) decoder — scaffold"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
